@@ -1034,6 +1034,7 @@ MyTorrentsView.menu.changeDirectory=Change Data Directory
 GenericText.column=column
 MyTorrentsView.menu.thisColumn.remove=Remove Column
 MyTorrentsView.menu.thisColumn.toClipboard=Copy Text To Clipboard
+MyTorrentsView.menu.thisColumn.autoTooltip=Always display tooltip
 MyTorrentsView.menu.tracker=Tracker
 ConfigView.download.abbreviated=D:
 ConfigView.upload.abbreviated=U:
